--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,7 +1,7 @@
 \paragraph{Theoretical contributions}
 The theoretical section presents an accessible introduction to the electrodynamics of periodic structures. It starts from the fundamental Maxwell equations, develops the concept of waves propagating in vacuum and in resonant media. It shows how the local medium responds to oscillating electric field as a damped oscillator and how it influences the dispersion curves. Beyond this common approach, the nonlocal response is introduced, and it is shown that in homogeneous media it inevitably causes the material properties depend not only on the frequency, but also on the magnitude of the wave vector, which is known as spatial dispersion. 
 The spatial dispersion is a phenomenon common in optics, but it is usually negligible in homogeneous materials. In the electrodynamics of periodic structures,  it is particularly pronounced. More general shapes of the dispersion curves in spatially-dispersive media are illustrated in several figures. 
-The dispersion curves are also shown to become periodic as a result of the Bloch theorem; the chapter further introduces the concepts of isofrequency contours, Brillouin zones and high-symmetry points in the reciprocal space, and discusses when the notions of group, phase and information velocity are applicable.
+The dispersion curves are also shown to become periodic with the wavevector, as a result of the Bloch theorem; the chapter further introduces the concepts of isofrequency contours, Brillouin zones and high-symmetry points in the reciprocal space, and discusses when the notions of group, phase and information velocity are applicable.
 
 Nowadays, perhaps more than ever earlier, it is important to maintain an outlook over the history of the rapid scientific development. The following historical review traces back the origin of numerous concepts much earlier than the majority of metamaterial-related papers advertise. The analysis of how atomic lattices should be treated as homogeneous media puzzled physicists over a century ago, and the synthesis of inhomogeneous structures with desired macroscopic \textit{homogenized} behaviour is not much younger than the microwave technology on its own.
 
