--- a/theory.tex
+++ b/theory.tex
@@ -1051,7 +1051,7 @@ The first Bragg band gap is observed in a periodic structure when the wavenumber
 The Bragg band gaps exhibit a constant $m$ over the whole band gap, without any resonance-like shape of the $\Neff(f)$ %$= \KK(f)c/(2\pi f)$ 
 curve observed for individual resonances. 
 
-In analogy with the solid-state physics the Bragg band gaps can be called \textit{direct}\index{band gaps!direct and indirect} if the dispersion curves at the lower and upper band gap edges have the same wavenumber $K$.  In contrast, the individual resonances are analogous to the \textit{indirect} band gaps, as the of phase increase over an unit cell is different  for frequencies below and above the individual resonance. 
+In analogy with the solid-state physics the Bragg band gaps can be called \textit{direct}\index{band gap!direct and indirect} if the dispersion curves at the lower and upper band gap edges have the same wavenumber $K$.  In contrast, the individual resonances are analogous to the \textit{indirect} band gaps, as the of phase increase over an unit cell is different  for frequencies below and above the individual resonance. 
 % TODO 2 cos(K d) = Tr(M)    -- \cite Y. Fink, J.N. Winn, S. Fan, C. Chen, J. Michel, J.D. Joannopoulos, E.L.  Thomas, Science 282 (1998) 1679
 %% Other types of band gaps
 %% In the literature, also other types of band gaps were identified.  zero-average-index band gaps?
