--- a/theory.tex
+++ b/theory.tex
@@ -772,7 +772,7 @@ Note that the Bloch's theorem does not determine the shape of $\mathbf{u_e}(\rr)
 
 %}}}
 \paragraph{Proof of the Bloch's theorem in one dimension}%{{{
-This theorem is essential for understanding the electromagnetic behaviour of periodic structures, and it deserves a proof. Originally, it was developed for the electron wave function $\psi$ in crystals on the basis of quantum mechanics. The outline of such a proof in one dimension, which is the most usual one in textbooks (e.g. \cite[p. 134]{ashcroft2005solid}) is based on the following:
+This theorem is essential for understanding the electromagnetic behaviour of periodic structures, and it deserves a proof. Originally, it was developed for the electron wave function $\psi$ in crystals on the basis of quantum mechanics. The outline of such a proof in one dimension is based on the following:
 \label{blochproof}
 \begin{enumerate}
  \item{We assume $\psi$ is an eigenfunction of the Hamiltonian: $\exists h\in \mathbb{C}: \hat H\psi = h\psi$.} 
