Fixed the citation style to the norm, Biblatex formatting options are horrible horrible horrible

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -29,7 +29,7 @@
   pages = {30492--30503}, 
   publisher = {OSA},
   volume = {22}, 
-  url = {http://www.opticsexpress.org/abstract.cfm?URI=oe-22-25-30492},
+  %url = {http://www.opticsexpress.org/abstract.cfm?URI=oe-22-25-30492},
   doi = {10.1364/OE.22.030492},
 }
 
@@ -43,7 +43,7 @@
   note = {},
   volume = {8771},
   doi = {10.1117/12.2017006},
-  URL = {http://dx.doi.org/10.1117/12.2017006},
+  %URL = {http://dx.doi.org/10.1117/12.2017006},
   note = {Poster},
 }
 
@@ -127,7 +127,7 @@
    volume = "103",
    number = "22", 
    eid = 221103,
-   url = "http://scitation.aip.org/content/aip/journal/apl/103/22/10.1063/1.4836195",
+   %%%url = "http://scitation.aip.org/content/aip/journal/apl/103/22/10.1063/1.4836195",
    doi = "http://dx.doi.org/10.1063/1.4836195" 
 }
 
@@ -141,7 +141,7 @@
 	number = {},
 	pages = {89931B},
 	doi = {10.1117/12.2029352},
-	URL = {http://dx.doi.org/10.1117/12.2029352},
+	%%%URL = {http://dx.doi.org/10.1117/12.2029352},
 	eprint = {}
 }
 
@@ -153,7 +153,7 @@
 	YEAR = {2014},
 	keywords = {Surface waves; Near-field microscopy; Terahertz imaging},
 	publisher = {Optical Society of America},
-	url = {http://www.opticsinfobase.org/abstract.cfm?URI=CLEO_SI-2014-STh4F.2},
+	%%%url = {http://www.opticsinfobase.org/abstract.cfm?URI=CLEO_SI-2014-STh4F.2},
 	abstract = {Electromagnetic Zenneck THz surface waves propagating on a bow-tie antenna are employed for time-resolved near-field imaging of subwavelength-size {SrTiO}$_{3}$ and {TiO}$_{2}$ particles. This approach provides high contrast, high-spatial resolution imaging through enhancing the field-particle interaction.},
 }
 
@@ -416,7 +416,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @book{jackson1962book,
   title={Classical electrodynamics},
   author={Jackson, John David},
-  volume={3},
+  %volume={3},
   year={1962},
   publisher={Wiley New York etc.}
 }
@@ -448,7 +448,6 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @book{krowne2007book,
   title={Physics of negative refraction and negative index materials: optical and electronic aspects and diversified approaches},
   author={Krowne, Clifford M and Zhang, Yong},
-  volume={98},
   year={2007},
   publisher={Springer}
 }
@@ -605,7 +604,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 %% first applying NRW method to inhomogeneus cells of a MM, did not discuss possible problems
 @article{smith2002determination, 
   title={Determination of effective permittivity and permeability of metamaterials from reflection and transmission coefficients},
-  author={Smith, DR and Schultz, S and Marko{\v{s}}, P and Soukoulis, CM},
+  author={Smith, D R and Schultz, S and Marko{\v{s}}, P and Soukoulis, CM},
   journal={Phys. Rev. B},
   volume={65},
   number={19},
@@ -815,7 +814,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 }
 @article{smith2005electromagnetic,
   title={Electromagnetic parameter retrieval from inhomogeneous metamaterials},
-  author={Smith, DR and Vier, DC and Koschny, Th and Soukoulis, CM},
+  author={Smith, D R and Vier, DC and Koschny, Th and Soukoulis, CM},
   journal={Physical Review E},
   volume={71},
   number={3},
@@ -951,7 +950,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
   month = {Sep},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevB.66.115109},
-  url = {http://link.aps.org/doi/10.1103/PhysRevB.66.115109}
+  %url = {http://link.aps.org/doi/10.1103/PhysRevB.66.115109}
 }
 @article{zengerle1987light,
   title={Light propagation in singly and doubly periodic planar waveguides},
@@ -1227,7 +1226,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
   month = {Jul},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.101.027402},
-  url = {http://link.aps.org/doi/10.1103/PhysRevLett.101.027402}
+  %url = {http://link.aps.org/doi/10.1103/PhysRevLett.101.027402}
 }
 @article{zhao2009mie,
   title={Mie resonance-based dielectric metamaterials},
@@ -1631,10 +1630,10 @@ lts.fzu.cz/pdf/d-js.pdf
 /*}}}*/
 
 % == THz technology == /*{{{*/
-@article{lee2008book,
+@book{lee2008book,
   title={Principles of terahertz science and technology},
   author={Lee,Yun-Shik},
-  journal={NY: Springer},
+  journal={Springer},
   year={2008}
 }
 @article{exter1989,
@@ -1956,7 +1955,7 @@ lts.fzu.cz/pdf/d-js.pdf
   volume =       8,
   number =       3,
   pages =        {173--190},
-  url =  {http://www.opticsexpress.org/abstract.cfm?URI=OPEX-8-3-173 }
+  %url =  {http://www.opticsexpress.org/abstract.cfm?URI=OPEX-8-3-173 }
 }
 @article{oskooi2010meep,
   author = {Ardavan F. Oskooi and David Roundy and Mihai Ibanescu and Peter Bermel and J. D. Joannopoulos and Steven G. Johnson},
@@ -1986,7 +1985,7 @@ lts.fzu.cz/pdf/d-js.pdf
   volume = 34,
   pages = {2778--2780},
   month = {September},
-  url = {http://www.opticsinfobase.org/ol/abstract.cfm?URI=ol-34-18-2778},
+  %url = {http://www.opticsinfobase.org/ol/abstract.cfm?URI=ol-34-18-2778},
   abstract = {Finite-difference time-domain methods suffer from reduced accuracy when discretizing discontinuous materials. We previously showed that accuracy can be significantly improved by using subpixel smoothing of the isotropic dielectric function, but only if the smoothing scheme is properly designed. Using recent developments in perturbation theory that were applied to spectral methods, we extend this idea to anisotropic media and demonstrate that the generalized smoothing consistently reduces the errors and even attains second-order convergence with resolution.}
 }
 @article{oskooi2011distinguishing,
@@ -2032,48 +2031,48 @@ lts.fzu.cz/pdf/d-js.pdf
 	title = {Metamaterials - Definition},
 	howpublished={Online},
 	url={http://www.metamorphose-vi.org/index.php/metamaterials},
-	note={last visited {December} 2015},}
+	note={Last visited {December} 2015},}
 }
 @misc{moroz2011,
 	author = {Moroz, A},
 	title = {Drude model parameters},
 	howpublished={Online},
 	url={http://www.wave-scattering.com/drudefit.html},
-	note={last visited {M}ay 2015},}
+	note={Last visited {M}ay 2015},}
 }
 @misc{ab-initio,
 	author = {Joannopoulos, John D and Johnson, Steven G and others},
 	title = {The Joannopoulos Research Group at MIT},
 	howpublished={Online},
 	url={http://ab-initio.mit.edu/photons/index.html},
-	note={last visited {O}ctober 2015},}
+	note={Last visited {O}ctober 2015},}
 }
 @misc{dominec2014_meep_metamaterials,
 	author = {Dominec, Filip},
 	title = {MEEP metamaterial simulation scripts},
 	howpublished={Online},
 	url={https://github.com/FilipDominec/meep\_metamaterials},
-	note={last visited {M}ay 2014},}
+	note={Last visited {M}ay 2014},}
 }
 @misc{dominec2015_mpb,
 	author = {Dominec, Filip},
 	title = {MPB plotting script},
 	howpublished={Online},
 	url={https://github.com/FilipDominec/mpb-plotting},
-	note={last visited {O}ctober 2015},}
+	note={Last visited {O}ctober 2015},}
 }
 @misc{dominec2015_triostepper,
 	author = {Dominec, Filip},
-	title = {TrioStepper, controller for three stepper motors, last visited {M}ay 2014},
+	title = {TrioStepper, controller for three stepper motors, Last visited {M}ay 2014},
 	howpublished ={\texttt{https://github.com/FilipDominec/triostepper}, Online},
 }
 @misc{dominec2014_imagej,
 	author = {Dominec, Filip},
-	title = {Calculating size distribution of powder particles using ImageJ, \textit{http://f.dominec.eu/granulo/index.html}, last visited {A}pril 2015},
+	title = {Calculating size distribution of powder particles using ImageJ, \textit{http://f.dominec.eu/granulo/index.html}, Last visited {A}pril 2015},
 	howpublished ={Online},
 }
 
-@article{taflove2005book,
+@book{taflove2005book,
   title={Computational Electrodynamics: The Finite-Difference Time-Domain Method (Artech House, 2005)},
   author={Taflove, A and Hagness, SC},
   journal={Artech House, Norwood, MA}
@@ -2170,7 +2169,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @book{klingshirn2007semiconductor,
   title={Semiconductor optics},
   author={Klingshirn, Claus F},
-  volume={3},
+  %volume={3},
   year={2007},
   publisher={Springer}
 }
@@ -2237,14 +2236,12 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
   title={Physics of negative refraction and negative index materials: optical and electronic aspects and diversified approaches},
   chapter={Spatial Dispersion, Polaritons, and Negative Refraction}, 
   editor={Krowne, Clifford M and Zhang, Yong},
-  volume={98},
   year={2007},
   publisher={Springer}
 }
 @book{landau1984electrodynamics,
   title={Electrodynamics of continuous media},
   author={Landau, Lev Davidovich and Bell, JS and Kearsley, MJ and Pitaevskii, LP and Lifshitz, EM and Sykes, JB},
-  volume={8},
   year={1984},
   pages = 359,
   publisher={Elsevier}
@@ -2551,7 +2548,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{bruleanalysis,
   title={Analysis of generalized Kramers-Kronig relations extended to electromagnetic spatially dispersive media},
   author={Br{\^u}l{\'e}, Yoann and Dem{\'e}sy, Guillaume and Gralak, Boris},
-  url={http://cmd25jmc14.sciencesconf.org/},
+  %url={http://cmd25jmc14.sciencesconf.org/},
   year=2014,
 }
 @article{makarov2013kramers,
